Correct overflow value in times section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,5 +196,5 @@ hr {
     background-size: cover;
     background-position: center;
     width: 100%;
-    overflow: hideen;
+    overflow: hidden;
 }
